<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyValet</string>
    <string name="hello_world">Hello world!</string>
	<string name="bar_chart">Bar Chart</string>
	<string name="search_string">Search</string>
	<string name="view_string">View</string>
	<string name="edit_string">Edit</string>
	<string name="select_date_string">Select Date</string>
	<string name="credit_string">Credit</string>
	<string name="debit_string">Debit</string>
	<string name="balance_string">Balance</string>
	<string name="amount_string">Amount</string>
	<string name="cancel_string">Cancel</string>
	<string name="catagory_String">Catagory</string>
	<string name="discription_string">Discription</string>
	<string name="add_string">Add</string>
	<string name="date_string">Date</string>
	<string name="ok_string">Ok</string>
	<string name="dark_string">Dark</string>
	<string name="light_string">Light</string>
	<string name="select_theme_string">Select the theme</string>
	<string name="enter_id_string">Enter the id of the item</string>
	<string name="select_month_string">Select the month</string>
	<string name="enter_year_string">Enter the year</string>
	
	<string-array name="credit_category_array">
	    <item>Salary</item>
	    <item>Bills</item>
		<item>Others</item>
	</string-array>
	<string-array name="debit_category_array">
		<item>Food</item>
		<item>Entertainment</item>
		<item>Loan</item>
		<item>Bills</item>
		<item>Grocery</item>
		<item>Dress</item>
		<item>Others</item>
	</string-array>
	<string-array name="view_array">
		<item>JANUARY</item>
		<item>FEBRUARY</item>
		<item>MARCH</item>
		<item>APRIL</item>
		<item>MAY</item>
		<item>JUNE</item>
		<item>JULY</item>
		<item>AUGUST</item>
		<item>SEPTEMBER</item>
		<item>OCTOBER</item>
		<item>NOVBER</item>
		<item>DECEMBER</item>
	</string-array>
	<string-array name="month_search_array">
		<item></item>
		<item>JANUARY</item>
		<item>FEBRUARY</item>
		<item>MARCH</item>
		<item>APRIL</item>
		<item>MAY</item>
		<item>JUNE</item>
		<item>JULY</item>
		<item>AUGUST</item>
		<item>SEPTEMBER</item>
		<item>OCTOBER</item>
		<item>NOVBER</item>
		<item>DECEMBER</item>
	</string-array>
	
	<string-array name="category_search_array">
		<item></item>
		<item>Salary</item>
		<item>Food</item>
		<item>Entertainment</item>
		<item>Loan</item>
		<item>Others</item>
		<item>Bills</item>
		<item>Grocery</item>
		<item>Dress</item>
		<item>Others</item>
	</string-array>
	<string-array name="amount_array">
		<item></item>
		<item>Equal</item>
		<item>Less Than</item>
		<item>Greater Than</item>
	</string-array>
</resources>
