<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/select_theme_string"
			android:textSize="18sp"
			android:layout_margin="10dp"/>

	</LinearLayout>

	<RadioGroup
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="vertical"
		android:id="@+id/themeRadioGroup">

		<RadioButton
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/light_string"
			android:id="@+id/lightRadioButton"
			android:layout_margin="10dp"
			android:checked="true"/>

		<RadioButton
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/dark_string"
			android:id="@+id/darkRadioButton"
			android:layout_margin="10dp"/>

	</RadioGroup>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_margin="10dp"
			android:layout_weight="1.0"
			android:textSize="18sp"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/ok_string"
			android:id="@+id/themeDialogButton"
			android:layout_margin="10dp"
			android:layout_marginLeft="0dp"
			android:layout_marginStart="0dp"
			android:background="@android:color/transparent"
			android:textColor="#20D7B1"
			android:textSize="16sp"
			android:layout_weight="1.0"/>

	</LinearLayout>

</LinearLayout>

