<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/enter_id_string"
		android:id="@+id/editmenudialogTextView"
		android:textSize="18sp"
		android:layout_margin="10dp" />

	<EditText
		android:layout_height="wrap_content"
		android:inputType="number"
		android:layout_width="wrap_content"
		android:ems="10"
		android:id="@+id/editmenudialogEditText"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:layout_margin="10dp"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/cancel_string"
			android:textSize="16sp"
			android:background="@android:color/transparent"
			android:textColor="#20D7B1"
			android:layout_weight="1.0"
			android:id="@+id/editmenudialogcancelButton"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/edit_string"
			android:id="@+id/editmeudialogButton"
			android:layout_weight="1.0"
			android:background="@android:color/transparent"
			android:textColor="#20D7B1"
			android:textSize="16sp"/>

	</LinearLayout>

</LinearLayout>

