<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/enter_year_string"
		android:textSize="18sp"
		android:layout_margin="10dp"/>

	<EditText
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:ems="10"
		android:layout_margin="10dp"
		android:id="@+id/viewdialogEditText"/>

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/select_month_string"
		android:textSize="18sp"
		android:layout_margin="10dp" />

	<Spinner
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:id="@+id/viewdialogSpinner"
		android:entries="@array/view_array"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:layout_margin="10dp"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<Button
			android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:text="Cancel"
			android:layout_weight="1.0"
			android:background="@android:color/transparent"
			android:textColor="#20D7B1"
			android:textSize="16sp"
			android:id="@+id/viewdialogcancelButton"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:text="@string/view_string"
			android:id="@+id/viewdialogButton"
			android:layout_weight="1.0"
			android:background="@android:color/transparent"
			android:textColor="#20D7B1"
			android:textSize="16sp"/>

	</LinearLayout>

</LinearLayout>

